<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="1dp"
        android:background="@color/colorWhite"
        card_view:cardCornerRadius="1dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/custom_map_pins"
                    android:textColor="@color/colorBlack"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TabLayout
                    android:id="@+id/idTabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:background="@color/colorWhite"
                    app:tabGravity="fill" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/idPinColorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:visibility="gone">

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite">

                    <RadioGroup
                        android:id="@+id/idRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <RadioButton
                            android:id="@+id/radioButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:checked="true"
                            android:text="@string/green"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:padding="5dp"
                            android:text="@string/magenta"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />


                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:padding="5dp"
                            android:text="@string/violet"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/radioButton4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:padding="5dp"
                            android:text="@string/yellow"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/radioButton5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:padding="5dp"
                            android:text="@string/cyan"
                            android:textColor="@color/colorBlack"
                            android:textSize="14sp" />
                    </RadioGroup>
                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>